[gd_scene load_steps=2 format=3 uid="uid://c6g28pn0wlbh0"]

[ext_resource type="Script" path="res://scripts/ui/mobile_input.gd" id="1_mn4hf"]

[node name="MobileInput" type="CanvasLayer"]
script = ExtResource("1_mn4hf")

[node name="JoystickBackground" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.4)
offset_left = 50.0
offset_top = 520.0
offset_right = 200.0
offset_bottom = 670.0

[node name="JoystickHandle" type="Panel" parent="."]
modulate = Color(0.7, 0.7, 1, 0.6)
offset_left = 100.0
offset_top = 570.0
offset_right = 150.0
offset_bottom = 620.0

[node name="ActionButton" type="Button" parent="."]
offset_left = 1100.0
offset_top = 570.0
offset_right = 1230.0
offset_bottom = 670.0
text = "Action"

[connection signal="pressed" from="ActionButton" to="." method="_on_action_button_pressed"]
